--- a/package.json
+++ b/package.json
@@ -19,6 +19,16 @@
   "author": "MapleLeaf",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "koa": "^3.0.0",
+    "koa-body": "^6.0.1",
+    "koa-router": "^13.0.1",
+    "zod": "^3.25.51"
+  },
+  "devDependencies": {
+    "@types/koa-router": "^7.4.8",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
     "@eslint/js": "^9.27.0",
     "@koa/cors": "^5.0.0",
     "@types/better-sqlite3": "^7.6.13",
@@ -30,16 +40,6 @@
     "eslint": "^9.27.0",
     "eslint-import-resolver-typescript": "^4.4.0",
     "eslint-plugin-import": "^2.31.0",
-    "globals": "^16.2.0",
-    "koa": "^3.0.0",
-    "koa-body": "^6.0.1",
-    "koa-router": "^13.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
-    "zod": "^3.25.51"
-  },
-  "devDependencies": {
-    "@types/koa-router": "^7.4.8"
+    "globals": "^16.2.0"
   }
 }
