feat: add PluginMeta type definition for API metadata structure
- Introduced HttpMethod type for allowed HTTP methods.
- Defined ParamType for parameter types.
- Created Param interface to structure parameter details.
- Added PluginMeta interface to encapsulate API path, method, description, tags, and parameters.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ZeroOneAPI",
+  "name": "zero_one_api",
   "version": "1.0.0",
   "description": "A lightweight, open, and continuously maintained public API aggregation service.",
   "main": "src/app.ts",
