build(bun): 用 bun 替代 node 运行项目
- 更新 package.json 中的 dev 脚本，使用 bun 代替 ts-node
- 在 src/app.ts 中添加 logger 中间件，移除 koa-body 和 koa-router 的直接引用
- 更新 tsconfig.json，调整类型定义路径和 include 配置
- 删除 types/global.d.ts 和 types/plugin/plugin-meta.d.ts 文件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "typeRoots": [
             "./node_modules/@types",
-            "types/**/*.d.ts"],
+            "./src/types/*"],
         "baseUrl": "./src",
         "moduleResolution":"nodenext",
         "module": "NodeNext",
@@ -18,8 +18,8 @@
             "@middlewares/*": ["middlewares/*"],
             "@config/*": ["config/*"],
             "@routes/*": ["routes/*"],
-            "@types/*": ["types/*"],
+            "@types/*": ["src/types/*"],
           }
     },
-    "include": ["src", "types/**/*.d.ts"],
+    "include": ["src", "src/types/**/*.d.ts"],
 }
