--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A lightweight, open, and continuously maintained public API aggregation service.",
   "main": "src/app.ts",
   "scripts": {
-    "dev": "ts-node --files src/server.ts",
+    "dev": "bun src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -22,24 +22,27 @@
     "koa": "^3.0.0",
     "koa-body": "^6.0.1",
     "koa-router": "^13.0.1",
+    "log4js": "^6.9.1",
     "zod": "^3.25.51"
   },
   "devDependencies": {
-    "@types/koa-router": "^7.4.8",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
     "@eslint/js": "^9.27.0",
     "@koa/cors": "^5.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/koa": "^2.15.0",
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
+    "@types/koa-router": "^7.4.8",
+    "@types/log4js": "^2.3.5",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.27.0",
     "eslint-import-resolver-typescript": "^4.4.0",
     "eslint-plugin-import": "^2.31.0",
-    "globals": "^16.2.0"
+    "globals": "^16.2.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1"
   }
 }
