refactor(bun): 更新项目配置和插件管理
- 更新 bun.lock 文件，升级 tsconfig-paths 等依赖
- 移除 ICP 备案查询插件
- 更新插件加载逻辑
- 调整 TypeScript 配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "typeRoots": [
             "./node_modules/@types",
-            "./src/types/*"],
+            "./src/types/**"],
         "baseUrl": "./src",
         "moduleResolution":"nodenext",
         "module": "NodeNext",
@@ -18,8 +18,8 @@
             "@middlewares/*": ["middlewares/*"],
             "@config/*": ["config/*"],
             "@routes/*": ["routes/*"],
-            "@types/*": ["src/types/*"],
+            "@types/*": ["types/*"]
           }
     },
-    "include": ["src", "src/types/**/*.d.ts"],
+    "include": ["src"],
 }
