--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-body": "^6.0.1",
     "koa-router": "^13.0.1",
     "log4js": "^6.9.1",
+    "redis": "^5.5.6",
     "zod": "^3.25.51"
   },
   "devDependencies": {
