feat(env): 添加环境变量支持并优化服务器配置
- 引入 dotenv 包以支持环境变量加载
- 更新 app.ts 中的代码，使用 Koa 替代 koa
- 修改 logger.ts 中的日志格式
- 移除 icp-checker.ts 中的 X-Powered-By 头设置
- 更新 server.ts，使用环境变量配置端口和主机

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "MapleLeaf",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "koa": "^3.0.0",
     "koa-body": "^6.0.1",
     "koa-router": "^13.0.1",
