refactor(server): 重构服务启动逻辑并优化 Redis 连接
- 移除了 package.json 中的 test 脚本
- 重构了 server.ts 中的服务启动逻辑，使用异步函数确保 Redis 连接成功后再启动服务
- 优化了 Redis 连接配置，使用对象形式统一管理配置项
- 添加了 Redis 连接成功和失败的日志记录
- 优化了代码结构，提高了可读性和可维护性

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A lightweight, open, and continuously maintained public API aggregation service.",
   "main": "src/app.ts",
   "scripts": {
-    "dev": "bun src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "bun src/server.ts"
   },
   "keywords": [
     "api",
