--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "MapleLeaf",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@koa/router": "^13.1.1",
     "dotenv": "^16.5.0",
     "koa": "^3.0.0",
     "koa-body": "^6.0.1",
