--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ lerna-debug.log*
 /.vscode
 /.idea
 
+# plugins
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
