--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@koa/router": "^13.1.1",
+    "chalk": "^5.4.1",
     "dotenv": "^16.5.0",
     "koa": "^3.0.0",
     "koa-body": "^6.0.1",
