--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ lerna-debug.log*
 # plugins
 /src/plugins/example/*
 !/src/plugins/example/helloWorld.ts
+!/src/plugins/system/*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
