--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ lerna-debug.log*
 /.idea
 
 # plugins
+/src/plugins/*
 /src/plugins/example/*
 !/src/plugins/example/helloWorld.ts
 !/src/plugins/system/*
