--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa": "^3.0.0",
     "koa-body": "^6.0.1",
     "log4js": "^6.9.1",
+    "node-fetch": "^3.3.2",
     "redis": "^5.5.6",
     "zod": "^3.25.51"
   },
